fix: updated cicd and docker file with correct filepath for kubernetes clusters, also ensured Docker build context is backend/ only

--- a/WealthWise-Group12-CA2-PRN-086-119-120-135/backend/Dockerfile
+++ b/WealthWise-Group12-CA2-PRN-086-119-120-135/backend/Dockerfile
@@ -1,26 +1,37 @@
 # Use official Python image
 FROM python:3.11-slim
 
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
+
 # Set working directory
 WORKDIR /app
 
-# Copy requirements
-COPY requirements.txt requirements.txt
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        build-essential \
+        libpq-dev \
+        curl \
+        git \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy only requirements first for caching
+COPY requirements.txt .
 
-# Copy project files
+# Install Python dependencies
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
+# Copy rest of the project
 COPY . .
 
-# Expose port Django will run on
+# Expose Django port
 EXPOSE 8000
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
-
-# Run migrations (optional)
+# Optional: run migrations (can also do in CI/CD)
 # RUN python manage.py migrate
 
-# Start Django server
-CMD ["gunicorn", "wealthwise.wsgi:application", "--bind", "0.0.0.0:8000"]
+# Start Django with Gunicorn
+CMD ["gunicorn", "wealthwise.wsgi:application", "--bind", "0.0.0.0:8000", "--workers=3"]
