--- a/.github/workflows/ci-cd-grp12.yml
+++ b/.github/workflows/ci-cd-grp12.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           az aks get-credentials --resource-group devopsca2 --name wealthwise-cluster
 
-      # Build Docker image
+      # Build Docker image (context = backend folder)
       - name: Build Docker image
         run: |
           docker build -t wealthwiseregistry.azurecr.io/wealthwise-backend:latest ./WealthWise-Group12-CA2-PRN-086-119-120-135/backend
@@ -40,5 +40,4 @@ jobs:
         run: |
           kubectl apply -f ./WealthWise-Group12-CA2-PRN-086-119-120-135/backend/k8s/deployment.yaml
           kubectl apply -f ./WealthWise-Group12-CA2-PRN-086-119-120-135/backend/k8s/service.yaml
-          # Wait for deployment to finish
           kubectl rollout status deployment/wealthwise-backend
