--- a/.github/workflows/ci-cd-grp12.yml
+++ b/.github/workflows/ci-cd-grp12.yml
@@ -45,8 +45,13 @@ jobs:
         run: |
           docker push wealthwiseregistry.azurecr.io/wealthwise-backend:${{ env.IMAGE_TAG }}
 
-      # Update deployment with new image
-      - name: Deploy to AKS
+      # Update deployment.yaml with new image tag dynamically
+      - name: Update deployment.yaml image
         run: |
-          kubectl set image deployment/wealthwise-backend backend=wealthwiseregistry.azurecr.io/wealthwise-backend:${{ env.IMAGE_TAG }}
+          sed -i "s|image: wealthwiseregistry.azurecr.io/wealthwise-backend:.*|image: wealthwiseregistry.azurecr.io/wealthwise-backend:${{ env.IMAGE_TAG }}|" ./WealthWise-Group12-CA2-Group12/backend/deployment.yaml
+
+      # Apply deployment (ensures secrets/env vars are applied)
+      - name: Apply deployment
+        run: |
+          kubectl apply -f ./WealthWise-Group12-CA2-Group12/backend/deployment.yaml
           kubectl rollout status deployment/wealthwise-backend
