feat: add ServiceMonitor for wealthwise backend to enable Prometheus monitoring

--- a/WealthWise-Group12-CA2-PRN-086-119-120-135/backend/k8s/service.yaml
+++ b/WealthWise-Group12-CA2-PRN-086-119-120-135/backend/k8s/service.yaml
@@ -7,6 +7,7 @@ spec:
   selector:
     app: wealthwise-backend
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8000
       targetPort: 8000
